--- a/Algorithm/2. Bubble Sort.md
+++ b/Algorithm/2. Bubble Sort.md
@@ -46,4 +46,4 @@ for(int i=0;i<s.sisze();++i){
 1. 시간복잡도는 [[1. Selection Sort]]와 동일하게 O(n^2)이다.
 2. 유의점이 존재하기에 코테와 같은 바쁜 와중에 신경을 쓰며 하기에는 꼬일 수 있다.
 
-결론 : 시간복잡도가 길고, 컴파일이 꼬일 수 있다는 점에서 실전에서 절대 사용하지 않을 알고리즘인 것 같다.
+*결론 : 시간복잡도가 길고, 컴파일이 꼬일 수 있다는 점에서 실전에서 절대 사용하지 않을 알고리즘인 것 같다.*
