--- a/University/2-1/금융공학.md
+++ b/University/2-1/금융공학.md
@@ -76,7 +76,7 @@
 - 컴퓨터가 인간의 특정 행동을 흉내 낼 수 있게 하는 모든 기법
 - 딥러닝 기술의 발전 : 하드웨어의 성능이 발전하며 딥러닝이 가능해짐, 데이터 양에 비례한 성능과 효과를 보임. 빅데이터를 효과적으로 다룰 수 있는 도구 개발
 - 기호주의 인공지능 : 수학의 힘을 빌려 인공지능을 구현, 기호와 기호 사이의 적절한 논리 관계로 형성 및 설명 보험료 계산 시스템같은 전문가 시스템으로 활용
-- 열결주의 인공지능(딥러닝과 유사) : 뇌과학의 시냅스와 뉴런을 회로로 구현
+- 연결주의 인공지능(딥러닝과 유사) : 뇌과학의 시냅스와 뉴런을 회로로 구현
 - 퍼셉트론 여러개의 입력변수가 회로에 모여 y를 이룸(y = 변수1 * 가중치 + 변수2 * 가중치 ...)
 - 비즈니스 사례
 	- 이미지 인식 기반 서비스
