--- a/University/2-1/금융공학.md
+++ b/University/2-1/금융공학.md
@@ -220,7 +220,7 @@
 			- 주파수가 높아지면, 대역폭 증가, 장애물 극복하는 거리/능력 감소
 			- 높은 주파수 -> 높은 대역폭 -> 많은 전력
 			- 낮은 주파수 -> 낮은 대역폭 -> 더 먼거리 도달
-		- 수입(클라우드) : 각종 센서를 장착한 사물들이 많은 양의 데이터 생성, 이를 빅데이터 및 인공지능에서 활용
+		- 수집(클라우드) : 각종 센서를 장착한 사물들이 많은 양의 데이터 생성, 이를 빅데이터 및 인공지능에서 활용
 		- 분석(빅데이터) : 사물에서 발생하는 데이터가 많아지므로 적용 기술을 통한 데이터 분석 필요, 쿼리 기술과 지도/비지도 머신 러닝 기술을 통해 분석
 		- 실행(앱) : IoT앱 구축을 위한 패키지 앱(ERP, CRM)과 미들웨어 존재
 - 연결 기술 활용과 설계
