--- a/University/2-1/선형대수학.md
+++ b/University/2-1/선형대수학.md
@@ -1075,7 +1075,7 @@ $$
   $$det(A) = a_{11}C_{11} + a_{12}C_{12} + \dots + a_{1n}C_{1n}
   $$
 
-## Cramer's Rule
+## / Cramer's Rule
 
 - Ax = b인 선형 방정식에서 각 $x_i$는 다음과 같이 구할 수 있음:
   $$
