--- a/University/2-2/리눅스.md
+++ b/University/2-2/리눅스.md
@@ -1,34 +1,4 @@
-*기본 명령어*
----
-- whoami : 로그인 중인 user name 출력.
- ![[Pasted image 20251016104322.png]]
-- pwd(print working directory) : 현재 주소 출력
-![[Pasted image 20251016104338.png]]
-- cd(change directory) : 주소 변경 / ex) cd Desktop
-cd만 입력시 기본주소로 돌아감
-![[Pasted image 20251016104519.png]]
-- ls(list) : 현재 주소의 파일 리스트 출력 / 뒤에 파라미터 추가 가능
-ls -a (모든 파일 출력), ls -l(파일 정보까지 출력), ls -alF(파일이 directory인 경우 /를 붙여줌), ls -alF /(root directory를 기준으로 파일 출력), ls -s(파일 사이즈를 보여줌)
-![[Pasted image 20251016104859.png]]
-- permision mode 허가사항
-owner group others로 2진법으로 표시 가능 ex) rw-r--rx- =>
-(2진법) 110 100 110 =>(10진법)646 
-chmod를 통해 변경 가능. ex) ~ chmod 740 (~파일을 rwx r-- ---로 변경)
-r : readable(읽기), w : writable(쓰기), x : excutable(실행), - : unset
-	-!directory에서 x가 전부 -(unset)이면 들어가지 못함 owner에서 x를 허가해줘야함.
-permision mode 앞에 d(directory), -(file)
-![[Pasted image 20251016104949.png]]
-- --help : 명령어의 사용법을 출력해줌. ex) ls --help
-![[Pasted image 20251016105619.png]]
-- man : 명령어 사용법을 책처럼 출력해줌. ex) man ls 
-![[Pasted image 20251016105715.png]]
-- touch : 1. 빈 파일을 생성 2. 파일 업데이트 한 것처럼 refresh
-![[Pasted image 20251016105840.png]]
-touch ../B/bbb 처럼 상대주소로 다른 폴더에 파일 생성 가능
-![[Pasted image 20251016110722.png]]
-- alias : 명령어에 닉네임 설정(긴 명령어를 짧게 가능), 현재 쉘에서만 적용된다.
-alias 닉네임="명령어라인"
-![[Pasted image 20251016110043.png]]
+
 ---
 중간 문제 1
 ---
@@ -41,8 +11,7 @@ alias 닉네임="명령어라인"
 ---
 중간 문제 2 
 ---
-중간 1번. 쉘의 기능 3가지를 서술하시오 
-(==1. 명령어 해석 및 실행 기능==, 
+중간 1번. 쉘의 기능 3가지를 서술하시오 (==1. 명령어 해석 및 실행 기능==, 
 ==2. kernel 및 응용프로그램과의 인터페이스==, 
 ==3. 그 자체로 프로그래밍 언어==)
 중간 2번. 쉘 변수의 값을 보려면 (==echo==) 명령어를 사용해야 한다. 예를 들어 SHELL에 든 값을 보려면 (==echo $SHELL==)와 같이 입력해야 한다.
@@ -61,3 +30,137 @@ alias 닉네임="명령어라인"
 (==:%s/abc/xyz/gp==) 
 중간 5번. 디렉토리 ABC의 하위 디렉토리를 포함해서 없애려고 한다 명령어를 서술하시오.
 (==rm -fr ABC==)
+
+# 리눅스 시험 핵심 요약
+
+## 1. 기본 개념 & 셸(Shell) 🖥️
+
+* **리눅스의 철학**: 리눅스의 모든 것은 **파일**이다.
+* **셸(Shell)의 3가지 핵심 기능**:
+    1.  **명령어 해석기**: 사용자의 명령을 해석해서 커널에 전달하고 결과를 보여준다.
+    2.  **사용자 인터페이스**: 사용자와 시스템(커널) 사이의 대화 창구 역할을 한다.
+    3.  **프로그래밍 언어**: 스크립트를 작성해 반복 작업을 자동화할 수 있다.
+* **경로(Path)**:
+    * **절대 경로**: `/` (루트)부터 시작하는 전체 경로. (예: `/home/user/documents`)
+    * **상대 경로**: 현재 내 위치를 기준으로 하는 경로. (예: `../images`)
+        * `./` : 현재 디렉터리 (생략 가능)
+        * `../` : 상위 디렉터리
+        * `~` : 현재 로그인한 사용자의 홈 디렉터리
+
+---
+
+## 2. 파일 및 디렉터리 명령어 📂
+
+* **이동 및 확인**:
+    * `pwd`: 현재 위치(경로) 확인
+    * `cd [경로]`: 해당 경로로 디렉터리 이동
+    * `ls`: 현재 디렉터리의 파일/디렉터리 목록 표시
+        * `ls -l`: 권한, 소유자, 크기 등 상세 정보 표시
+        * `ls -a`: 숨김 파일(`.`)까지 모두 표시
+        * `ls -F`: 디렉터리 끝에 `/`를 붙여 표시
+
+* **생성 및 삭제**:
+    * `touch [파일명]`: 빈 파일을 생성하거나, 기존 파일의 최종 수정 시간을 현재로 변경
+    * `mkdir [디렉터리명]`: 디렉터리 생성
+    * `rm [파일명]`: 파일 삭제 ( `-i` 옵션 사용 시 삭제할지 물어봄)
+    * `rmdir [디렉터리명]`: **비어있는** 디렉터리 삭제
+    * `rm -rf [디렉터리명]`: **내용이 있는** 디렉터리를 강제로 전부 삭제 (주의!)
+    * rm -i : 하나씩 삭제할건지 물어보고 삭제
+
+* **복사 및 이동**:
+    * `cp [원본] [대상]`: 파일이나 디렉터리 복사
+    * `mv [원본] [대상]`: 파일이나 디렉터리 이동. 같은 경로에서 사용하면 **이름 변경(rename)** 기능이 됨.
+---
+
+## 3. 파일 권한 (Permission) 🔑
+
+`ls -l` 실행 시 맨 앞에 나오는 `rwxr-xr-x` 부분입니다.
+
+* **의미**: `r` (읽기), `w` (쓰기), `x` (실행)
+* **순서**: 소유자(owner), 그룹(group), 그 외(others) 순서
+* **명령어**: `chmod [숫자] [파일명]`
+    * 권한을 숫자로 변환하여 변경합니다. (r=4, w=2, x=1)
+    * **예시**:
+        * `rwxrw-r--` → `(4+2+1)(4+2+0)(4+0+0)` → **`chmod 764`**
+        * `rwxr-x--x` → `(4+2+1)(4+0+1)(0+0+1)` → **`chmod 751`**
+
+---
+
+## 4. 파일 내용 확인 및 검색 🔍
+
+* **내용 보기**:
+    * `cat [파일명]`: 파일 전체 내용을 터미널에 출력
+    * `more [파일명]`: 페이지 단위로 보여줌 (Space: 다음 페이지, Enter: 다음 줄, q: 종료)
+    * `less [파일명]`: `more`와 비슷하지만 기능이 더 많음 (방향키로 위아래 이동 가능)
+    * `head [파일명]`: 파일의 앞부분 10줄만 보여줌
+    * `tail [파일명]`: 파일의 뒷부분 10줄만 보여줌
+
+* **내용 검색**:
+    * `grep [찾을 문자열] [파일명]`: 파일 안에서 특정 문자열이 포함된 라인을 찾아 출력 ( **⭐매우 중요** )
+
+* **파일 찾기**:
+    * `find [위치] -name "[파일명]"`: 지정된 위치에서 조건에 맞는 파일을 찾음
+    * `whereis [명령어]`: 명령어의 실행 파일, 소스, 매뉴얼 페이지 위치를 찾아줌
+    * `which [명령어]`: `$PATH`에 설정된 경로에서 실행 파일을 찾아 **하나만** 보여줌
+
+---
+
+## 5. 프로세스 관리 ⚙️
+
+* **포그라운드(Foreground)**: 현재 터미널에서 작업 권한을 갖고 실행되는 프로세스. **단 하나만** 실행 가능.
+* **백그라운드(Background)**: 터미널 뒤편에서 실행되는 프로세스. **여러 개** 실행 가능.
+
+* **명령어**:
+    * `ps`: 현재 실행 중인 프로세스 목록 표시
+    * `명령어 &`: 명령어를 처음부터 백그라운드로 실행
+    * `Ctrl + Z`: 현재 실행 중인 포그라운드 프로세스를 **일시 정지**
+    * `jobs`: 백그라운드나 정지 상태인 프로세스 목록 보기
+    * `bg [%작업번호]`: 정지된 작업을 백그라운드에서 다시 실행
+    * `fg [%작업번호]`: 백그라운드 작업을 포그라운드로 가져옴
+    * `kill [%작업번호]`: 프로세스 강제 종료
+    * `top`: 시스템 프로세스를 실시간으로 보여주는 작업 관리자
+
+---
+
+## 6. `vi` 에디터 (⭐ 시험 단골)
+
+`vi`는 **명령 모드**와 **입력 모드** 두 가지가 있습니다.
+
+#### ### 명령 모드 (Control Mode)
+최초 실행 시 모드. 커서 이동, 삭제, 복사, 검색 등을 수행합니다.
+
+* **모드 전환**:
+    * 입력 모드 → 명령 모드: **`ESC`** 키
+    * 명령 모드 → 입력 모드:
+        * `i`: 커서 **앞**에서 입력 시작
+        * `a`: 커서 **뒤**에서 입력 시작
+        * `o`: 커서 **아래**에 새 줄을 만들어 입력 시작
+        * `O`: 커서 **위**에 새 줄을 만들어 입력 시작
+
+* **커서 이동**:
+    * `h, j, k, l`: 좌, 하, 상, 우
+    * `^`: 줄의 맨 앞으로 이동
+    * `$`: 줄의 맨 뒤로 이동
+    * `Ctrl+F`, `Ctrl+B`: 한 페이지씩 아래/위로 이동
+    * `G`: 파일의 맨 마지막 줄로 이동
+    * `숫자G`: 해당 숫자 라인으로 이동
+
+* **삭제 및 변경**:
+    * `x`: 한 글자 삭제
+    * `dd`: 한 줄 삭제
+    * `dw`: 한 단어 삭제
+    * `D`: 커서 뒤 라인 삭제
+    * `u`: 실행 취소 (Undo)
+
+* **검색 및 치환 (Search & Replace)**:
+    * `/찾을단어`: 커서 아래 방향으로 단어 검색 (`n`: 다음 찾기)
+    * `:%s/기존단어/바꿀단어/g`: 파일 전체(`%`)에서 모든(`g`) '기존단어'를 '바꿀단어'로 변경
+    * `:%s/기존단어/바꿀단어/gc`: 위와 같지만, 바꿀 때마다 확인(`c`) 받음
+
+* **저장 및 종료**:
+    * `:w`: 저장 (Write)
+    * `:q`: 종료 (Quit)
+    * `:q!`: 저장하지 않고 강제 종료
+    * `:wq` 또는 `ZZ`: 저장하고 종료
+
+
